--- a/src/app/work/projects/autocad-electrical-system-in-a-building-design.mdx
+++ b/src/app/work/projects/autocad-electrical-system-in-a-building-design.mdx
@@ -9,7 +9,8 @@ images:
 ---
 
 ## Overview
-
+autocad-electrical-system-in-a-building-design
+automate-design-handovers-with-a-figma-to-code-pipeline
 In this project, I will describe about a conceptual design of a three-phase low-voltage electrical routing system for reliable power supply to medical equipment.
 
 ## Key Features
