--- a/src/app/work/projects/malab-simulink-model-for-accumulator-heat-transfer-analysis.mdx
+++ b/src/app/work/projects/malab-simulink-model-for-accumulator-heat-transfer-analysis.mdx
@@ -17,7 +17,7 @@ team:
 ---
 
 ## Overview
-
+malab-simulink-model-for-accumulator-heat-transfer-analysis
 This project involves the modeling and simulation of thermal behavior in an accumulator (battery pack) using MATLAB Simulink. The study focuses on how heat is generated within battery cells during charging and discharging cycles and how it is transferred across the accumulator structure. A cooling loop system is then integrated into the model to manage the temperature rise, ensuring safe and efficient operation.
 
 ## Key Features
