--- a/src/app/work/projects/open-source-design-portfolio-website.mdx
+++ b/src/app/work/projects/open-source-design-portfolio-website.mdx
@@ -4,3 +4,5 @@ publishedAt: "2025-08-28"
 images:
   - "/images/projects/project-01/websiteportfolio.jpg"
 ---
+
+open-source-design-portfolio-website
